Use px instead of %. Fix layout issue.

--- a/css/index.scss
+++ b/css/index.scss
@@ -64,7 +64,7 @@ a {
     margin: 0 auto;
     top: 50%;
     transform: translateY(-50%);
-    left: 1%;
+    left: 12px;
     width: 55%;
     z-index: 2;
     position: absolute;
@@ -72,7 +72,7 @@ a {
       font-size: 3em;
       background-color: white;
       padding: 1em;
-      padding-left: calc(80px - 1%);
+      padding-left: calc(80px - 12px;);
     }
     .contact-body {
       font-size: 1.3em;
@@ -81,7 +81,7 @@ a {
       > ul {
         list-style-type: none;
         margin: 0;
-        padding-left: calc(30px - 1%);
+        padding-left: calc(30px - 12px;);
         > li {
           padding: 12px;
         }
